testdata/baselines/reference/compiler/jsdocSatisfiesTagWithParamTag.errors.txt
/a.js(9,16): error TS1360: Type '(a: string, b: string) => void' does not satisfy the expected type '(a: string, ...args: number[]) => void'.
  Types of parameters 'b' and 'args' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== /a.js (1 errors) ====
    /** 
     * @satisfies {(a: string, ...args: never) => void}
     * @param {string} a
     * @param {number} b
     */
    export const fn1 = (a, b) => {};
    
    /** 
     * @satisfies {(a: string, ...args: number[]) => void}
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1360: Type '(a: string, b: string) => void' does not satisfy the expected type '(a: string, ...args: number[]) => void'.
!!! error TS1360:   Types of parameters 'b' and 'args' are incompatible.
!!! error TS1360:     Type 'number' is not assignable to type 'string'.
     * @param {string} a
     * @param {string} b
     */
    export const fn2 = (a, b) => {};
    
    /** 
     * @satisfies {(a: string, ...args: number[]) => void}
     * @param {string} a
     * @param {string | number} b
     */
    export const fn3 = (a, b) => {};
    